# zym

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: full_executor.c  full_executor.h  main.c  runtime_loader.c  runtime_loader.h
src/natives/: ZymVM.c  buffer.c  console.c  io.c  marshal.c  marshal.h  natives.c  natives.h  os.c  print.c  process.c
src/natives/util/: random.c  time.c
